Added banner and removed logo

--- a/Project/home-page.html
+++ b/Project/home-page.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
+    <div class="banner"><img src="banner-pidgey.png"></div>
     <header>
-        <img class="logo" src="fat-pidgey.png" width="100" height="100">
-        <h1 class="web-name">Fat Pidgey</h1>
+        <br>
         <nav>
             <ul class="nav__links">
                 <li><a href="planning.html">Planning your trip</li>
@@ -28,8 +28,7 @@
         <div>
             <p>Hello there! Welcome to Australia! My name is Harley! People call me the Pokémon Travel Prof!
                 This world is inhabited by creatures called Pokémon! For some people, Pokémon are pets. Other use them
-                for
-                fights. Myself… I use pokemon to assist others in their travels.</p>
+                for fights. Myself… I use pokemon to assist others in their travels.</p>
         </div>
         <br>
         <div class="info-1">
