Started over on home page, added contact page and planning page

--- a/Project/home-page.html
+++ b/Project/home-page.html
@@ -10,44 +10,49 @@
 </head>
 
 <body>
-    <div class="banner"><img src="banner-pidgey.png"></div>
+    <div class="test-2">
+        <div><img class="banner" src="images\banner-pidgey.png">
+        </div>
+    </div>
     <header>
         <br>
         <nav>
             <ul class="nav__links">
-                <li><a href="planning.html">Planning your trip</li>
-                <li><a href="gallery.html">Gallery</li>
-                <li><a href="map.html">Map</li>
+                <a class="cta" href="plan-your-trip.html"><button>Plan</button></a>
+                <a class="cta" href="gallery.html"><button>Gallery</button></a>
+                <a class="cta" href="map.html"><button>Map</button></a>
+                <a class="cta" href="contact-us.html"><button>Contact us</button></a>
             </ul>
         </nav>
-        <a class="cta" href="contact.html"><button>Contact us</button></a>
     </header>
+    <!-- Info block 1 -->
+    <div class="info-box">
+        <h1>Welcome</h1>
+        <br>
+        <p>Hello there! Welcome to Australia! My name is Harley! People call me the Pokémon Travel Prof!
+            This world is inhabited by creatures called Pokémon! For some people, Pokémon are pets. Other use
+            them for fights. Myself… I use pokemon to assist others in their travels.</p>
+        <br>
+        <h2>Australia</h2>
+        <br>
+        <p>This magical place the world calls Australia is home many wonderful creatures and breathtaking
+            scenery all throughout. It is my job as a Travel professor to make sure you enjoy your stay.
+            Thank you for agreeing to help me with my research into the wildlife species we may find. As you're aware,
+            Australia is a vast land with many different aspects and sceneries to enjoy. On this research trip we will
+            be focusing on Sydney.</p>
+        <br>
+        <h2> Sydney</h2>
+        <br>
+        <p>Sydney spans from coastline to inner country farmlands, we will be mostly active within the coastline for
+            this trip. Please be sure to
+            mark down any and all encounters with pokemon and the native wildlife you may find around.
+        </p>
+    </div>
+    <br>
 
-    <div class="info-1">
-        <h1>Overview</h1>
-        <div>
-            <p>Hello there! Welcome to Australia! My name is Harley! People call me the Pokémon Travel Prof!
-                This world is inhabited by creatures called Pokémon! For some people, Pokémon are pets. Other use them
-                for fights. Myself… I use pokemon to assist others in their travels.</p>
-        </div>
-        <br>
-        <div class="info-1">
-            <h2>Australia</h2>
-            <br>
-            <p>This magical place the world calls Australia is home many wonderful creatures and breathtaking
-                scenery
-                all
-                throughout.
-                It is my job as a Travel professor to make sure you enjoy your stay.</p>
-        </div>
-        <br>
-        <h3>Placeholder text</h2>
-            <br>
-            <p>Placeholder text</p>
-    </div>
-    <div class="test">
-        <img src="aussie.png" class="map-1">
-    </div>
+    <img class="landing-image" src="images\harbour.jpg" alt="">
+
+
 </body>
 
 </html>
