--- a/Project/contact-us.html
+++ b/Project/contact-us.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Places to travel</title>
+    <title>Contact us</title>
     <link rel="stylesheet" href="contact-us.css">
 </head>
 
