Minor update to text and options

--- a/Project/contact-us.html
+++ b/Project/contact-us.html
@@ -32,7 +32,7 @@
         </div>
         <div class="row">
             <div class="column">
-                <img src="prof-harley.png" style="width:auto">
+                <img src="images\prof-harley.png" style="width:auto">
             </div>
             <div class="column">
                 <form action="/action_page.php">
@@ -54,7 +54,7 @@
                 </form>
                 <br>
                 <p>Are you interested in joining the research fun but don't have your own pokemon? Contact me at
-                    directly and we can work something out</p>
+                    directly and we can get you started on your own Pokemon Journey.</p>
                 <p>Email: hmanton1@woolworths.com.au</p>
                 <p>For any Professors looking for a collaboration, you can reach me on my <a
                         href="https://github.com/SolarsHub">Github</a></p>
