--- a/Project/gallery.html
+++ b/Project/gallery.html
@@ -38,7 +38,7 @@
             <img src="images\botanic-gardens4.jpg">
         </div>
         <div class="column">
-            <img src="images\Bondi-to-Coogee-Walk3.jpg">
+            <img src="images\Pika-beach.png">
             <img src="images\bondi-coogee-2.jpg">
             <img src="images\opera-house3.jpg">
         </div>
