--- a/Project/plan-your-trip.html
+++ b/Project/plan-your-trip.html
@@ -30,8 +30,17 @@
         <h1>Expedition</h1>
         <br>
         <h3>Our expedition begins from in the City Center, as this is a collaborative effort
-            with the team from WooliesX our Journey begins at their office.</h3>
+            with the team from WooliesX our Journey begins at their office. Please keep in mind that we will be among
+            the first to explore this new
+            region. Therefore, we will not have a comprehensive list on what we should expect when it comes to Pokemon
+            in the areas. I've included a little information
+            we've managed to gather but be diligent in your ecological survey so that we may accurately mark the
+            locations and nests in the areas.</h3>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
     <br>
 
     <div class="row">
@@ -42,11 +51,7 @@
                     <input type="checkbox" id="chck1">
                     <label class="tab-label" for="chck1">How to get there?</label>
                     <div class="tab-content">
-                        <p>
-                            Our expedition begins from in the City Center, as this is a collaborative effort
-                            with the team from Woolies X our Journey begins at their office.
-                        </p>
-                        <br>
+
                         <p>Bus
                             If you’re travelling from the city to Bondi Beach, the bus often runs from Circular Quay and
                             will take approximately 45
@@ -84,7 +89,7 @@
                     <input type="checkbox" id="chck2">
                     <label class="tab-label" for="chck2">What to do?</label>
                     <div class="tab-content">
-                        <p>Go swimming
+                        <p>Go swimming:
                             It may seem obvious, but one of the best things to do when visiting Bondi Beach is to take a
                             swim at this famous
                             location. Always be sure to swim between the red and yellow flags and follow the
@@ -93,7 +98,7 @@
                         </p>
                         <br>
                         <p>
-                            Go surfing
+                            Go surfing:
                             Whether you are a seasoned professional or just want to get started, surfing is a great
                             Australian pastime that should
                             definitely be tried out at Bondi Beach. You may want to consider bodyboarding if you have
@@ -103,7 +108,7 @@
                         </p>
                         <br>
                         <p>
-                            Sunbathing
+                            Sunbathing:
                             Sunbathing is a great way to relax, enjoy the beach and soak in the sun’s rays. However, as
                             the sun can be quite harsh
                             in Australia it’s always advised to use as much sunscreen protection as possible and cover
@@ -114,7 +119,7 @@
                         </p>
                         <br>
                         <p>
-                            Take a walk
+                            Take a walk:
                             It may seem like a silly suggestion, but it’s actually a great way to get oriented at this
                             location, see the sights and
                             see what the area has to offer. Whether it’s along the beach or along the main strip beside
@@ -165,6 +170,15 @@
                             Clovelly. You can spot wailmer along the coast between May and November during their annual
                             migration. While these areas are not in the expedition, don't feel restricted from your
                             explorations</p>
+                        <br>
+                        <p>Sunbathing is a great way to relax, enjoy the beach and soak in the sun’s rays.
+                            However, as the sun can be
+                            quite harsh in Australia it’s always advised to use as much sunscreen protection as possible
+                            and cover up where
+                            necessary. Never go out of your way to get sunburned, as this puts you at greater risk of
+                            skin cancers. But, with the
+                            right sun protection, you can still enjoy a relaxing session in the sun.</p>
+                        <br>
                         <p>
                             On the trail is Dolphins Point, Coogee’s northern headland where the bronze Bali Memorial
                             looks
@@ -195,6 +209,10 @@
         </div>
     </div>
     <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <div class="row">
         <div class="col">
             <h2>Circular Quay</h2>
@@ -203,14 +221,38 @@
                     <input type="checkbox" id="chck7">
                     <label class="tab-label" for="chck7">How to get there?</label>
                     <div class="tab-content">
-
+                        <p>Circular Quay is also home to a busy railway station and bus station. The range of transport
+                            options on offer, combined
+                            with its attractive, central location mean you have plenty of choice when it comes to ways
+                            of getting around Sydney’s
+                            many great sights. All roads basically lead to Circular Quay</p>
                     </div>
                 </div>
                 <div class="tab">
                     <input type="checkbox" id="chck8">
                     <label class="tab-label" for="chck8">What to do?</label>
                     <div class="tab-content">
+                        <p>This wonderful location is more than just a transport hub—Sydney is one of the first places
+                            in the world to welcome in
+                            the New Year, and the spectacular firework display celebrating this draws some of Sydney’s
+                            biggest crowds. Circular Quay
+                            is also right next to the recently refurbished Museum of Contemporary Art (MCA), a real
+                            honeypot for culture seekers and
+                            it’s also free to get in!
 
+                            For lovers of architecture, Customs House is also located in the Circular Quay area. This
+                            impressive structure is one of
+                            Sydney’s heritage buildings, and houses numerous interesting exhibitions as well as an
+                            extensive library. Customs House
+                            has a spectacular grand atrium and distinctive Helix staircase, along with striking and
+                            contemporary interior decor.
+                            Feast your eyes on the giant model of the city displayed in a glass case on the ground floor
+                            of the development.
+
+                            Being adjacent to the harbour, Circular Quay is the perfect place to catch a boat, whether
+                            you’re looking for a romantic
+                            sunset dinner cruise, or a fun tour of the harbour for all the family, Circular Quay has
+                            something to offer.</p>
                     </div>
                 </div>
                 <div class="tab">
@@ -235,14 +277,17 @@
                     <input type="checkbox" id="chck10">
                     <label class="tab-label" for="chck10">How to get there?</label>
                     <div class="tab-content">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos, facilis.
+                        The gardens are a short 3 minute walk from Circular Quay.
                     </div>
                 </div>
                 <div class="tab">
                     <input type="checkbox" id="chck11">
                     <label class="tab-label" for="chck11">What to do?</label>
                     <div class="tab-content">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil, aut.
+                        The Botanical Gardens is a vibrant and beautiful area filled with daily activities changing each
+                        day. If you want to know
+                        what you can do while you're there, it's better to just show up. They have performances, shows,
+                        art exibits as well as tours.
                     </div>
                 </div>
                 <div class="tab">
